--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     
     --cor-principal:#806ccf91;
     --cor-secundaria:#b9e2c26e;
-    --cor-texto:#05530b;
+    --cor-texto:#7bd882;
     --cor-de-fundo:#5373cc;
     --font:"Indie Flower";
 }
