--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ body{
     background-color: var(--cor-de-fundo);
     text-align: center;
 }
+.cabecalho_titulo{
+    font-size: 2rem;
+    color: var(--cor-secundaria);
+    font-weight: 700;
+}
+nav{
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+}
