--- a/style.css
+++ b/style.css
@@ -28,3 +28,14 @@ nav{
     justify-content: center;
     font-weight: 400;
 }
+nav a {
+    text-decoration: none;
+    color: var(--cor-texto);
+    margin: 0 2rem 1rem 0;
+    font-size: 1.2rem;
+}
+nav a:hover{
+    text-decoration:underline;
+    transform: scale(2.90);
+    transition: transform 0.1s;
+}
