--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     
     --cor-principal:#73f0a391;
     --cor-secundaria:#06945eb0;
-    --cor-texto:#023015;
-    --cor-de-fundo:#fd9ef8;
+    --cor-texto:#0d9646;
+    --cor-de-fundo:#9efdf8;
     --font:"Indie Flower";
     --bg-color: rgb(119, 0, 0);
 
