--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-principal:#73f0a391;
     --cor-secundaria:#06945eb0;
     --cor-texto:#0d9646;
-    --cor-de-fundo:#9efdf8;
+    --cor-de-fundo:#f07efa;
     --font:"Indie Flower";
     --bg-color: rgb(119, 0, 0);
 
